Update test with column-related styles.